[package]
name = "rustegram"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@pixartprinting.com>"]

[dependencies]
futures = "0.1.11"
hyper = "0.11"
native-tls = "0.1"
tokio-tls = { version = "0.1", features = [ "tokio-proto" ] }
tokio-proto = "0.1"
regex = "0.2"
lazy_static = "1.0.0"
toml = "0.4"
