[package]
name = "rustegram"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]

[dependencies]
futures = "0.1.11"
hyper = "0.11"
native-tls = "0.1"
tokio-tls = { version = "0.1", features = [ "tokio-proto" ] }
tokio-proto = "0.1"
regex = "0.2"
lazy_static = "1.0.0"
toml = "0.4"
dynamic_reload = "0.3.0"
serde_json = "1.0"
notify = "4.0.0"
client_lib = { path = "./client_lib" }
dynamic = "0.2"
