[package]
name = "rustegram"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]

[features]
default = []
https = ["rustls", "tokio-tcp", "tokio-rustls"]

[dependencies]
futures = "0.1"
hyper = "0.12"
http = "0.1"
rustls = { version = "0.11", optional = true }
tokio-tcp = { version = "0.1", optional = true }
tokio-rustls = { version = "0.4", optional = true }
regex = "1.0"
lazy_static = "1.1"
toml = "0.4"
dynamic_reload = "0.3"
serde  = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
notify = "4.0"
client_lib = { path = "./client_lib" }
log = "0.4"
env_logger = "0.5"
parking_lot = "0.6"
